[gd_scene load_steps=4 format=3 uid="uid://e03aogkfywgs"]

[ext_resource type="Script" path="res://scenes/objects/office/door_mat.gd" id="1_2bgl0"]
[ext_resource type="Texture2D" uid="uid://brypen1dmhnvr" path="res://graphics/objects/office/door_mat.png" id="1_8qfu8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_62dfe"]
radius = 195.0
height = 402.0

[node name="DoorMat" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2bgl0")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 300.0
offset_bottom = 136.0
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource("1_8qfu8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(158, 65)
shape = SubResource("CapsuleShape2D_62dfe")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
